--- a/AyBeSeeExample/Views/Home/Index.cshtml
+++ b/AyBeSeeExample/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
     @*This looks pretty shit, maybe put in some helpers for Buttons and Inputs etc.?*@
 	<input type="image" name="submit" value="downloaded"
 		src="@(Url.Content("~/Public/img/" +
-		abSee.ABTester.Test("download-button", new string[] { "greenbutton.png", "redbutton.png" }, "downloaded")))
+		abSee.ABTester.Test("download-button", new string[] { "greenbutton.png", "redbutton.png" })))
 		/>
 </form>
