Fixed up the Example project a bit to be a better example.

--- a/AyBeSeeExample/Views/Home/Index.cshtml
+++ b/AyBeSeeExample/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿
-@if (TempData["Message"] != null)
-{ 
-	<h5>@TempData["Message"]</h5>
-}
-
 <form method="post" action="/Home/Convert">
     @*This looks pretty shit, maybe put in some helpers for Buttons and Inputs etc.?*@
 	<input type="image" name="submit" value="downloaded"
-		src="@(Url.Content("~/Public/img/" +
-		abSee.ABTester.Test("download-button", new string[] { "greenbutton.png", "redbutton.png" })))
+		src="@(new HtmlString("/Public/img/" +
+		abSee.ABTester.Test("download-button", "greenbutton.png", "redbutton.png" )))"
 		/>
 </form>
