Fixed up a bit more of the function calls to make it better to use.

--- a/AyBeSeeExample/Views/Home/Results.cshtml
+++ b/AyBeSeeExample/Views/Home/Results.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    var results = abSee.ABTester.Settings.Storage.GetResults("download-button");
+    var results = abSee.ABTester.GetResults("download-button");
 }
 
 @foreach(var result in results)
