Fixed up a bit of the Example. Started some NetBash Command

--- a/AyBeSeeExample/Views/Home/Index.cshtml
+++ b/AyBeSeeExample/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
-<form method="post" action="/Home/Convert">
+<form method="post" action="@Url.Content("~/Home/Convert")">
     @*This looks pretty shit, maybe put in some helpers for Buttons and Inputs etc.?*@
 	<input type="image" name="submit" value="downloaded"
-		src="@(new HtmlString("/Public/img/" +
+		src="@(new HtmlString(Url.Content("~/Public/img/") +
 		abSee.ABTester.Test("download-button", "greenbutton.png", "redbutton.png")))"
 		/>
 </form>
