--- a/AyBeSeeExample/Views/Home/Results.cshtml
+++ b/AyBeSeeExample/Views/Home/Results.cshtml
@@ -1,30 +1,14 @@
 ﻿
-<ul>
-@foreach (var result in abSee.ABTester.GetResults("exampletest1"))
+@foreach (var test in abSee.ABTester.Settings.Storage.GetActiveTests())
 {
-    <li>
-        Option: @result.Option
-        Converted: @result.Converted.ToString()
-    </li>
+    <h5>@test.Name</h5>
+    <ul>
+    @foreach (var result in abSee.ABTester.GetResults(test.Name))
+    {
+        <li>
+            Option: @result.Option
+            Converted: @result.Converted.ToString()
+        </li>
+    }
+    </ul>
 }
-</ul>
-
-<ul>
-@foreach (var result in abSee.ABTester.GetResults("exampletest2"))
-{
-    <li>
-        Option: @result.Option
-        Converted: @result.Converted.ToString()
-    </li>
-}
-</ul>
-
-<ul>
-@foreach (var result in abSee.ABTester.GetResults("exampletest2"))
-{
-    <li>
-    Option: @result.Option
-    Converted: @result.Converted.ToString()
-    </li>
-}
-</ul>
